Changed Rebar config for sample application

--- a/sample/rebar.config
+++ b/sample/rebar.config
@@ -1,5 +1,5 @@
 {erl_opts, [debug_info]}.
 
 {deps, [
- {bifrost, ".*", {git, "git://github.com/thorstadt/bifrost.git", {branch, "master"}}}
+ {bifrost, ".*", {git, "https://github.com/dmitrii-zolotarev/bifrost.git", {branch, "master"}}}
 ]}.
