--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,9 @@
-{cover_enabled, true}.
-{erl_opts, [debug_info]}.
+%% THIS FILE IS GENERATED FOR release_3_7_0 %%
 
-{deps, [
-    {meck,			".*", {git, "git@git.eltex.loc:external/meck.git"}}
-]}.
+{cover_enabled,true}.
+{erl_opts,[debug_info]}.
+{deps,[{meck,".*",
+             {git,"git@git.eltex.loc:external/meck.git",
+                  {branch,"release_3_7_0"}}}]}.
+{clean_files,["*.eunit","ebin/*.beam"]}.
 
-{clean_files, ["*.eunit", "ebin/*.beam"]}.
